// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <div
    className="container"
  >
    <h2
      className="fw-bold"
    >
      GifExpertApp
    </h2>
    <pre>
      Created By: Alfredo Medina with React
    </pre>
    <AddCategory
      setCategories={[Function]}
    />
    <hr />
    <ol>
      <GifGrid
        category="One Punch"
        key="One Punch"
      />
      <GifGrid
        category="Dragon Ball"
        key="Dragon Ball"
      />
    </ol>
  </div>
</Fragment>
`;

exports[`Pruebas en <GifExpertApp /> debe mostrarse correctamente 1`] = `
<Fragment>
  <div
    className="container"
  >
    <h2
      className="fw-bold"
    >
      GifExpertApp
    </h2>
    <pre>
      Created By: Alfredo Medina with React
    </pre>
    <AddCategory
      setCategories={[Function]}
    />
    <hr />
    <ol />
  </div>
</Fragment>
`;
